THE GREAT WILDCRAFT TRANSITION BEGINS
WC FRUITS: 
- Fixed dehydrated fruit, dried fruit, candied fruit, syrup, fruit bread, gelatin, gozinaki, pemmican, stuffed bell pepper, trail mix, fruit bars, yogurt - DONE!!!
- nuts working in meals and food
- completed remapping
- acorn flour stuff incorporated

WC HERBS:
- added herbs to Dressing
- mixed herbs added

MORE ANIMALS:
- Egg parity achieved

- Cooked chopped pumpkin slice texture fixed, handbook for muffin updated accordingly - DONE!!!
- Spirits no longer turn into vingear - DONE!!!
- Dialogue added to Kitchenware Trader
- Sausage lasts longer; has cured variants - DONE!!!
- Old fish sauce barrel recipe removed - DONE!!!
- Honey yogurt has HP healing - DONE!!!
- Alchemy herbs hang on meat racks correctly
- Chopped items can be boiled
- Bread starter max volume increased
- Broth is drinkable
- Clarified broth requires 1/10th as much egg
- Any expanded bread or herbal bread can be ground into appropriate breadcrumbs
- All first person animations removed
- Dehydrated fruit has full healing; dried fruit has half healing
- Fried veggies can be added to cold pasta
- Syrups (and other liquids) can be added to pies - KINDA DONE??? (check all liquids)
- Fine and strong wine distill into spirits at a buffed rate - DONE!!!
- Maple bread crumbs can be put in small trough
- Chickens can actually eat egg shells now
- Cured meat nuggets can be added to soups - DONE!!!
- Cassava whiskey renamed to cassava vodka - DONE!!!
- Bread starter stack size increased from 16 to 5000 - DONE!!!
- Breadcrumbs now have the ExpandedFood class - DONE!!!  breadcrumbs generally nerfed to compensate, grid recipe removed
- Cooked meat can be smashed with rocks
- Crab actually works in all meals that fish does (pasta)
- Meal shape patches fixed - DONE!!! 
- Dumpling shapes added inside meals?
- Noodles can be added to soup

1.6.9

- Food Stuff:
Added Dressing (vinegar + egg white + oil)
Updated fish sauce recipe (check Cooking 104 for details)