@@ -29,7 +29,7 @@
 			"expandedfoods:acornbreadcrumbs-cassava": {saturation: 220, foodcategory: "Grain"},
 			"expandedfoods:acornbreadcrumbs-amaranth": {saturation: 220, foodcategory: "Grain"},
 			"expandedfoods:acornbreadcrumbs-sunflower": {saturation: 220, foodcategory: "Grain"},
-    		"expandedfoods:foodoilportion-*" : { saturation: 6.4, "health": 0.1, foodcategory: "Fruit" },
+    		"expandedfoods:foodoilportion-*" : { saturation: 6.4, "health": 0.1, foodcategory: "Vegetable" },
     		"expandedfoods:treesyrupportion-*" : { saturation: 9.6, "health": 0.1, foodcategory: "Fruit" },
     		"expandedfoods:fruitsyrupportion-saguaro" : { saturation: 12, "health": 0.2, foodcategory: "Fruit" }, 
       		"expandedfoods:fruitsyrupportion-*" : { saturation: 12, "health": 0.1, foodcategory: "Fruit" },
