@@ -40,7 +40,7 @@
 			"expandedfoods:breadcrumbs-sunflower": {saturation: 150, foodcategory: "Grain"},
 			"expandedfoods:breadcrumbs-birch": {saturation: 150, foodcategory: "Grain"},
 			"expandedfoods:breadcrumbs-pine": {saturation: 150, foodcategory: "Grain"},
-    		"expandedfoods:foodoilportion-*" : { saturation: 6.4, "health": 0.1, foodcategory: "Fruit" },
+    		"expandedfoods:foodoilportion-*" : { saturation: 6.4, "health": 0.1, foodcategory: "Vegetable" },
     		"expandedfoods:treesyrupportion-*" : { saturation: 9.6, "health": 0.1, foodcategory: "Fruit" },
     		"expandedfoods:fruitsyrupportion-saguaro" : { saturation: 12, "health": 0.2, foodcategory: "Fruit" }, 
       		"expandedfoods:fruitsyrupportion-*" : { saturation: 12, "health": 0.1, foodcategory: "Fruit" },
