@@ -76,6 +76,7 @@ WC HERBS:
 MORE ANIMALS:
 - Egg parity achieved
 
+- Food oil in fried food registers as Vegetable and not Fruit satiation
 - Cooked chopped pumpkin slice texture fixed, handbook for muffin updated accordingly - DONE!!!
 - Spirits no longer turn into vingear - DONE!!!
 - Dialogue added to Kitchenware Trader
